--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -77,6 +77,9 @@ privacy_pack = true
 #   `repo` defines the repository URL. `editable` defines which page types can be edited.
 edit_page = {repo_url = "https://github.com/rodrigoalcarazdelaosa/rodrigoalcarazdelaosa.me", content_dir = "", repo_branch = "master", editable = {docs = false, page = false, post = false}}
 
+# Show related content at the bottom of pages?
+show_related = {docs = true, page = false, post = true, project = true, publication = true, talk = true}
+
 ############################
 ## Contact details
 ##
