--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -107,3 +107,4 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
     name = "authors"
     weight = 20.0
   
+timeout = 100000
