--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,9 +35,15 @@
 
 [[main]]
   name = "2º Bach"
-  url = "apuntes/#segundo-bach"
   parent = "apuntes"
-  weight = 5  
+  identifier = "2º Bach"
+  weight = 5
+
+[[main]]
+  name = "Física"
+  url = "apuntes/#segundo-bach-fisica"
+  parent = "2º Bach"
+  weight = 1  
   
 [[main]]
   name = "Recursos EBAU"
