--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -140,6 +140,12 @@
   url = "sobre-mi/#trayectoria"
   parent = "sobre-mi"
   weight = 2  
+  
+[[main]]
+  name = "Estancias de investigación"
+  url = "sobre-mi/#estancias"
+  parent = "sobre-mi"
+  weight = 3    
 
 [[main]]
   name = "Contacto"
