--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -88,7 +88,7 @@
   weight = 2    
 
 [[main]]
-  name = "Enlaces de interés"
+  name = "🔗 Enlaces de interés"
   url = "enlaces-interes/"  
   identifier = "enlaces-interes"
   weight = 4
