--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -130,7 +130,7 @@
   weight = 6
   
 [[main]]
-  name = "Intereses y formación"
+  name = "👨‍🔬 Intereses y formación"
   url = "sobre-mi/"
   parent = "sobre-mi"
   weight = 1
