--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -26,7 +26,7 @@ font = "garamond"
 
 # Choose a font size.
 # Sizes: XS (extra small), S (small), M (medium), L (large - DEFAULT), XL (extra large)
-font_size = "M"
+font_size = "XL"
 
 ############################
 ## Basic Info
