--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -172,7 +172,7 @@ abstract_length = 135
 
 # Load JS plugins
 #   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
-plugins_js  = ["applause-button","footnotes"]
+plugins_js  = ["applause-button"]
 
 # Avatars.
 # An avatar is an image that appears next to a user's name.
