--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -63,6 +63,8 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 [markup]
   defaultMarkdownHandler = "goldmark"
   [markup.goldmark]
+	[markup.goldmark.parser]
+	  autoHeadingIDType = "blackfriday"
     [markup.goldmark.renderer]
       unsafe = true  # Enable user to embed HTML snippets in Markdown content.
   [markup.highlight]
