--- a/data/themes/tol.toml
+++ b/data/themes/tol.toml
@@ -9,7 +9,7 @@ primary = "#2a54a9"
 
 # Menu
 menu_primary = "#2a54a9"
-menu_text = "#fffff8"
+menu_text = "#ffffff"
 menu_text_active = "#f7f056"
 menu_title = "#f7f056"
 
