--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -5,7 +5,11 @@
 # Configure the Spanish version of the site.
 [es]
   languageCode = "es"
-  # contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
+  contentDir = "content/es"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
+  
+[en]
+  languageCode = "en"
+  contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.  
 
 # Uncomment the lines below to configure your website in a second language.
 #[zh]
