--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -9,7 +9,8 @@
   
 [en]
   languageCode = "en"
-  contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.  
+  contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
+  title = "Physchemcally with Rodri"
 
 # Uncomment the lines below to configure your website in a second language.
 #[zh]
