--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -11,6 +11,8 @@
   languageCode = "en"
   contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
   title = "Physchemcally with Rodri"
+  [en.params]
+  	description = "Physics and Chemistry resources, tutorials and current science"
 
 # Uncomment the lines below to configure your website in a second language.
 #[zh]
