--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -53,103 +53,103 @@
   
 [[main]]
   name = "☢️ Physics"
-  url = "ebau-resources/#examenes-fisica"
+  url = "ebau-resources/#physics-exams"
   parent = "ebau-resources"
   weight = 1
   
 [[main]]
   name = "⚗️ Chemistry"
-  url = "ebau-resources/#examenes-quimica"
+  url = "ebau-resources/#chemistry-exams"
   parent = "ebau-resources"
   weight = 2  
   
 [[main]]
   name = "💡 Tips"
-  url = "ebau-resources/#consejos"
+  url = "ebau-resources/#tips"
   parent = "ebau-resources"
   weight = 3  
 
 [[main]]
   name = "👐 Tutorials"
-  url = "tutoriales/"  
-  identifier = "tutoriales"
+  url = "tutorials/"  
+  identifier = "tutorials"
   weight = 3
   
 [[main]]
   name = "$\\LaTeX$"
-  parent = "tutoriales"
-  url = "tutoriales/latex"
+  parent = "tutorials"
+  url = "tutorials/latex"
   weight = 1
   
 [[main]]
   name = "Presentation of information"
-  parent = "tutoriales"
-  url = "tutoriales/presentacion-informacion"
+  parent = "tutorials"
+  url = "tutorials/presentation-information"
   weight = 2    
 
 [[main]]
   name = "🔗 Links of interest"
-  url = "enlaces-interes/"  
-  identifier = "enlaces-interes"
+  url = "links-interest/"  
+  identifier = "links-interest"
   weight = 4
   
 [[main]]
   name = "Online resources"
-  url = "enlaces-interes/#recursos-online"
-  parent = "enlaces-interes"
+  url = "links-interest/#online-resources"
+  parent = "links-interest"
   weight = 1
   
 [[main]]
   name = "Friend pages"
-  url = "enlaces-interes/#paginas-amigas"
-  parent = "enlaces-interes"
+  url = "links-interest/#friend-pages"
+  parent = "links-interest"
   weight = 2
 
 [[main]]
   name = "🗞️ News"
-  url = "#novedades"
-  identifier = "novedades"
+  url = "#news"
+  identifier = "news"
   weight = 5
 
 [[main]]
   name = "🐦 Twitter"
-  url = "#novedades"
-  parent = "novedades"
+  url = "#news"
+  parent = "news"
   weight = 1  
   
 [[main]]
   name = "💬 Blog"
   url = "/post"
-  parent = "novedades"
+  parent = "news"
   weight = 2    
 
 [[main]]
   name = "👨‍🔬 About me"
-  url = "sobre-mi/"
-  identifier = "sobre-mi"
+  url = "about-me/"
+  identifier = "about-me"
   weight = 6
   
 [[main]]
   name = "👨‍🔬 Interests and education"
-  url = "sobre-mi/"
-  parent = "sobre-mi"
+  url = "about-me/"
+  parent = "about-me"
   weight = 1
 
 [[main]]
   name = "👣 Career path"
-  url = "sobre-mi/#trayectoria"
-  parent = "sobre-mi"
+  url = "about-me/#career"
+  parent = "about-me"
   weight = 2  
   
 [[main]]
   name = "✈️ Research stays"
-  url = "sobre-mi/#estancias"
-  parent = "sobre-mi"
+  url = "about-me/#stays"
+  parent = "about-me"
   weight = 3    
 
 [[main]]
   name = "✉️ Contact"
-  url = "#contacto"
+  url = "#contact"
   weight = 7
 
 # Link to a PDF of your resume/CV from the menu.
