--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -28,8 +28,8 @@
   weight = 3
 
 [[main]]
-  name = "1st Bacc"
-  url = "notes/#first-bacc"
+  name = "1st Bach"
+  url = "notes/#first-bach"
   parent = "notes"
   weight = 4
 
