--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -148,7 +148,7 @@ address_format = "es"
 ############################
 
 # Main menu alignment (l = left, c = center, r = right) and logo options.
-main_menu = {align = "l", show_logo = true, highlight_active_link = false, show_language = true}
+main_menu = {align = "l", show_logo = true, highlight_active_link = false, show_language = false}
 
 # Show estimated reading time for posts? (true/false)
 reading_time = true
