--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -89,7 +89,7 @@
 
 [[main]]
   name = "🔗 Links of interest"
-  url = "enlaces-interes/"  
+  url = "en/enlaces-interes/"  
   identifier = "enlaces-interes"
   weight = 4  
 
