--- a/config/_default/menus.es.toml
+++ b/config/_default/menus.es.toml
@@ -46,7 +46,7 @@
   weight = 6
   
 [[main]]
-  name = "🎓 Recursos EBAU"
+  name = "🎓 EBAU"
   url = "recursos-ebau/"
   identifier = "recursos-ebau"
   weight = 2
