--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,7 +8,7 @@
 timeout = 100000
 
 # Title of your site
-title = "Físquicamente con Rodri"
+title = "Fisiquímicamente con Rodri"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
