--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -88,7 +88,7 @@
   weight = 2    
 
 [[main]]
-  name = "🔗 Links of interest"
+  name = "🔗 Interesting links"
   url = "en/enlaces-interes/"  
   identifier = "enlaces-interes"
   weight = 4  
