--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -46,7 +46,7 @@
   weight = 6  
   
 [[main]]
-  name = "🎓 EBAU"
+  name = "🎓 Recursos EBAU"
   url = "recursos-ebau/"
   identifier = "recursos-ebau"
   weight = 2
