--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -58,7 +58,7 @@ description = "Recursos de Física y Química, tutoriales y ciencia de actualida
 # Documentation: https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
 highlight = true
 highlight_languages = ["tex"]  # Add support for highlighting additional languages
-highlight_style = "tomorrow"  # For supported styles, see https://cdnjs.com/libraries/highlight.js/
+highlight_style = "nord"  # For supported styles, see https://cdnjs.com/libraries/highlight.js/
 
 # Enable LaTeX math rendering? true/false
 #   If false, you can enable math on a per page basis as needed.
