--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -57,7 +57,7 @@ description = "Recursos de Física y Química, tutoriales y ciencia de actualida
 # Enable source code highlighting? true/false
 # Documentation: https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
 highlight = true
-highlight_languages = ["tex"]  # Add support for highlighting additional languages
+# highlight_languages = ["tex"]  # Add support for highlighting additional languages
 # highlight_style = "nord"  # For supported styles, see https://cdnjs.com/libraries/highlight.js/
 
 # Enable LaTeX math rendering? true/false
